--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <a href="#">About</a>
       <a href="#">Contact</a>
     </nav>
-    <div id="navlogo" class="flexitem">
-    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    <div id="navlogo" class="flexitem"><a href="index.html">
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
   </div>
   </header>
 
