Completed services.html, updated index.css, added a app.js file to throw in some javascript to show what page is active

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
+  <script src="app.js"></script>
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -16,18 +17,18 @@
 
 <body class="container">
   <header id="header" class="flexcontainer">
-     <nav id="navmenu flexitem">
-      <a href="services.html">Services</a>
-      <a href="#">Product</a>
-      <a href="#">Vision</a>
-      <a href="#">Features</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-    <div id="navlogo" class="flexitem"><a href="index.html">
-    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
-  </div>
-  </header>
+    <nav id="navmenu flexitem">
+     <a class="a" href="services.html">Services</a>
+     <a class="a" href="#">Product</a>
+     <a class="a" href="#">Vision</a>
+     <a class="a" href="#">Features</a>
+     <a class="a" href="#">About</a>
+     <a class="a" href="#">Contact</a>
+   </nav>
+   <div id="navlogo" class="flexitem"><a href="index.html">
+   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+ </div>
+ </header>
 
   <section id="section1" class="flexcontainer">
     <div id="sub">
