--- a/services.html
+++ b/services.html
@@ -8,6 +8,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
+  <script src="app.js"></script>
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -19,12 +20,12 @@
 
   <header id="header" class="flexcontainer">
     <nav id="navmenu flexitem">
-     <a href="services.html">Services</a>
-     <a href="#">Product</a>
-     <a href="#">Vision</a>
-     <a href="#">Features</a>
-     <a href="#">About</a>
-     <a href="#">Contact</a>
+     <a class="a active" href="services.html">Services</a>
+     <a class="a" href="#">Product</a>
+     <a class="a" href="#">Vision</a>
+     <a class="a" href="#">Features</a>
+     <a class="a" href="#">About</a>
+     <a class="a" href="#">Contact</a>
    </nav>
    <div id="navlogo" class="flexitem"><a href="index.html">
    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
@@ -105,7 +106,8 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-
+<br>
+<br>
 <ul class="list">
   <li class="list-item">Awesome thing</li>
   <li class="list-item">Amazing thing</li>
