Edited code, changed ID's created new branch just in case

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body class="container">
-  <header id="header" class="flexcontainer">
-    <nav id="navmenu flexitem">
+  <header id="header" class="headerflexcont">
+    <nav id="navmenu navflexitems">
      <a class="a" href="services.html">Services</a>
      <a class="a" href="#">Product</a>
      <a class="a" href="#">Vision</a>
@@ -25,13 +25,13 @@
      <a class="a" href="#">About</a>
      <a class="a" href="#">Contact</a>
    </nav>
-   <div id="navlogo" class="flexitem"><a href="index.html">
+   <div id="navlogo" class="navflexlogo"><a href="index.html">
    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
  </div>
  </header>
 
-  <section id="section1" class="flexcontainer">
-    <div id="sub">
+  <section id="calltoaction" >
+    <div id="sub" class="calltoaction-flexitem">
     <h1 id="mega-huge">
     Innovation </br>
     On</br>
@@ -39,40 +39,40 @@
   </h1>
     <button id="button1">Get Started</button>
   </div>
-  <div id="sub-logo" class="flexitem">
+  <div id="sub-logo" >
     <img class="image1" src="img/header-img.png" alt="Image of a code snippet.">
   </div>
   </section>
   <hr>
   
-  <div class="wrapper">
-    <section class="section-block1 flexitem">
+  <div class="wrapperflexcont">
+    <section class="featflexitem">
    <h3 class="small-header">
     Features
   </h3>
     <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   
   </section>
-  <section class="section-block1">
+  <section class="aboutflexitem">
   <h3 class="small-header">About</h3>
   <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </section>
   </div>
   
-  <div class="wrapper">
+  <div class="wrapperflexcont">
     <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
   </div>
   
-    <div class="wrapper">
-    <section class="section-block2 flexitem">
+    <div class="wrapperflexcont">
+    <section class="servicesflexitem">
         <h3 class="small-header">Services</h3>
         <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </section>
-  <section class="section-block2">
+  <section class="productflexitem">
   <h3 class="small-header">Product</h3>
     <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </section>
-  <section class="section-block2 flexitem">
+  <section class="visionflexitem">
     <h3 class="small-header">Vision</h3>
     <p class="section-text">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </section>
